hphp/test/zend/good/Zend/tests/bug36071.php.expectf

Fatal error: clone called on non-object in %s/bug36071.php on line 2
